Fixed form image causing x-bleed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -551,6 +551,7 @@ textarea::placeholder {
 
 .form-image-wrapper > img {
     width: 400px;
+    max-width: 95vw;
     margin-top: 11rem;
 }
 
